<resources>
    <string name="app_name">client_light</string>
    <string name="action_settings">Settings</string>
    <string name="message_box_hint">Type a message...</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="message_funny_wow">We\'re so excited to have your credentials</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_changes">Save changes</string>
    <string name="cancel">Cancel</string>
    <string name="apply">apply</string>
    <string name="select_an_avatar">Select an avatar</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="choose_an_avatar">Choose an avatar</string>
    <string name="stats">Stats</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="profile">Profile</string>
    <string name="difficulty">Difficulty:</string>
    <string name="game_mode">Mode:</string>
    <string name="add_gameroom_name_button">add_gameRoom_name_button</string>
    <string name="no_gamerooms_matching">There are no gamerooms matching these parameters</string>
    <string name="private_game_channel">Private game channel</string>
    <string name="leave">Leave</string>
    <string name="gamerooms">Gamerooms</string>
    <string name="start_game">Start Game</string>
    <string name="timer">Timer</string>
    <string name="game_name">Game Name</string>
    <string name="Starting_0pts">0pts</string>
    <string name="answer">Answer</string>
    <string name="_0">0</string>
    <string name="previous_attempts">Previous Attempts</string>
    <string name="attempts_left">Attempts Left</string>
    <string name="hints">Request Hint</string>
    <string name="starting_number_3_attempts">3</string>
    <string name="draw_me_a_picture">Draw Me a Picture</string>
    <string name="play">Play</string>
    <string name="quit">Quit</string>
    <string name="text">TEXT</string>
    <string name="best_sprint_solo_score">Best sprint solo score</string>
    <string name="win_ratio">Win ratio</string>
    <string name="average_time_per_game">Average time per game</string>
    <string name="total_time_played">Total time played</string>
    <string name="games_played">Games played</string>
    <string name="search">Filter</string>
    <string name="available_channels">Available Channels</string>
    <string name="test">TEST</string>
    <string name="new_gameroom_name">New gameroom name</string>
    <string name="username">userName</string>
    <string name="join">JOIN</string>
    <string name="white_level">Saturation</string>
    <string name="black_level">Value</string>
    <string name="opacity">Opacity</string>
    <string name="quick_select">Quick select</string>
    <string name="color_history">Color history</string>
    <string name="toggle_grid">Toggle grid</string>
    <string name="grid_opacity">Grid opacity</string>
    <string name="grid_width">Grid width</string>
    <string name="_10">10</string>
    <string name="theme_mode">Theme</string>
    <string name="tutorial">Tutorial</string>
    <string name="channel_list">Channels</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="add_channel_name_button">add_channel_name_button</string>
    <string name="custom_color">Custom color</string>
</resources>
