<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/color_picker_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <com.larswerkman.holocolorpicker.ColorPicker
            android:id="@+id/color_picker"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/white_level"/>
        <com.larswerkman.holocolorpicker.SaturationBar
            android:id="@+id/saturation_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
        android:text="@string/black_level"/>
        <com.larswerkman.holocolorpicker.ValueBar
            android:id="@+id/value_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/opacity"/>
        <com.larswerkman.holocolorpicker.OpacityBar
            android:id="@+id/opacity_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/confirm_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="?attr/backgroundNavbar"
            android:text="@string/apply"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/color_picker_back_button"
            android:text="@string/back"
            android:backgroundTint="?attr/backgroundNavbar"
            android:textColor="@color/white"
            android:layout_width="150dp"
            android:layout_height="50dp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>