<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.MainMenuFragment">


    <Button
        android:id="@+id/play_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/tutorial_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/tutorial"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/quit_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/quit"
        android:textColor="@color/black"
        android:textSize="25sp" />

</LinearLayout>