<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/color_quick_select_text"
        android:text="@string/quick_select"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:textColor="?attr/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/color_quick_select"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/color_quick_select_text"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:justifyContent="center">
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/color_history_text"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/color_history"
        android:textColor="?attr/textColor"
        android:layout_below="@id/color_quick_select"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/color_history"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/color_history_text"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        app:justifyContent="center">

    </com.google.android.flexbox.FlexboxLayout>

    <LinearLayout
        android:id="@+id/quick_select_buttons"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/color_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/more_colors_button"
            android:text="@string/custom_color"
            android:layout_marginBottom="23dp"
            android:layout_width="150dp"
            android:textColor="@color/white"
            android:backgroundTint="?attr/backgroundNavbar"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/quick_select_back_button"
            android:textColor="@color/white"
            android:backgroundTint="?attr/backgroundNavbar"
            android:text="@string/back"
            android:layout_width="150dp"
            android:layout_height="50dp"/>
    </LinearLayout>
</RelativeLayout>