<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:fontFamily="sans-serif">

    <TextView
        android:id="@+id/alertElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_container"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/bordered_text"
        android:backgroundTint="#F1BDC2"
        android:foreground="@drawable/bordered_text"
        android:padding="10dp"
        android:text="hello"
        android:textColor="#7A3A40"
        android:textSize="15sp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="?attr/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="40dp"
                android:text="@string/sign_in"
                android:textColor="?attr/textColor"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signingTitle"
                android:layout_marginTop="-35dp"
                android:text="@string/message_funny_wow"
                android:textColor="?attr/textColor" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bordered_text"
                android:backgroundTint="#FFFFFF"
                android:ems="20"
                android:foreground="@drawable/bordered_text"
                android:hint="@string/username_hint"
                android:textColor="#000000"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bordered_text"
                android:backgroundTint="#FFFFFF"
                android:ems="20"
                android:foreground="@drawable/bordered_text"
                android:hint="@string/password_hint"
                android:textColor="#000000"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                tools:layout_editor_absoluteX="548dp"
                tools:layout_editor_absoluteY="521dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/backgroundColor">

            <Button
                android:id="@+id/signingSwitch"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="?attr/colorPrimary"
                app:strokeColor="?attr/colorPrimary" />

            <Button
                android:id="@+id/signingButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_in"
                android:textColor="?attr/backgroundColor" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>