<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryDark">

        <TextView
            android:id="@+id/channelListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingTop="10dp"
            android:text="@string/channel_list"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/filterChannelsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/channelListTitle"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/bordered_text"
            android:hint="@string/search"
            android:padding="10dp"
            android:textColor="?attr/textColor"
            android:textColorHint="?attr/textColor"
            android:textSize="15sp" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/newChannelContainer"
            android:layout_below="@+id/filterChannelsText"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/joined_channels_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/joined_channels_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="Joined Channels"
                        android:textColor="?attr/textColor"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/joinedChannelsContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/joined_channels_title"
                        android:orientation="vertical" />
                </RelativeLayout>

                <View
                    android:id="@+id/separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/rounded_corners"
                    android:backgroundTint="@color/colorAccent" />

                <RelativeLayout
                    android:id="@+id/available_channels_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/available_channels_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/available_channels"
                        android:textColor="?attr/textColor"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/nonJoinedChannelsContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/available_channels_title"
                        android:orientation="vertical" />

                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/newChannelContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/newChannelNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@id/newChannelButton"
                android:background="@drawable/bordered_text"
                android:hint="New channel name"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:maxLength="13"
                android:padding="10dp"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/textColor"
                android:textSize="15sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/newChannelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/add_channel_name_button"
                android:src="@drawable/ic_baseline_add_24"
                android:tooltipText="Add new channel"
                app:backgroundTint="@color/colorPrimaryDark"
                app:elevation="1dp"
                app:fabSize="mini"
                app:rippleColor="@color/colorPrimary" />
        </RelativeLayout>

    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/chatMessagesContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>